--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -24,8 +24,10 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+        working-directory: ./docs
       - name: Build site
         run: npm run build
+        working-directory: ./docs
       - name: Deploy to gh-pages branch (gh-pages action)
         uses: peaceiris/actions-gh-pages@v4
         with:
