Chore: Translate remaining Korean comments and update docs content

--- a/.env.example
+++ b/.env.example
@@ -8,31 +8,31 @@ PORT=8082
 TZ=Asia/Seoul
 LOG_LEVEL=INFO
 
-# ===== 경로 (상대좌표) =====
+# ===== Paths (relative) =====
 HOST_SECRETS=./secrets
 HOST_HELPER=./auth-helper
 
-# ===== 컨테이너 내부 경로 =====
+# ===== Container internal paths =====
 SERVER_CTR_SECRETS=/app/secrets
 TOOL_CTR_SECRETS=/opt/secrets
 TOOL_CTR_HELPER=/opt/auth-helper
 PYTHON_VENDOR=/opt/auth-helper/vendor
 
-# ===== 권한 =====
+# ===== Permissions =====
 USER_ID=1000
 GROUP_ID=1000
 
-# ===== 툴 컨테이너 =====
+# ===== Tool container =====
 TOOL_CONTAINER=auth-tool
 TOOL_IMAGE=mcr.microsoft.com/azure-cli:latest
 
-# ===== MCP 서버 =====
+# ===== MCP server =====
 MCP_CONTAINER=mcp-server
 MCP_IMAGE=yamon/mcp-server:latest
 MCP_TOKEN_FILE=${SERVER_CTR_SECRETS}/token.json
 
-# ===== 로그인 자동화를 위한 텐턴트/구독 고정 (필요 시 값 입력) =====
-# 오류 로그에 나온 올바른 테넌트 ID를 여기에 넣으면 MFA 유도되는 잘못된 테넌트로 가지 않습니다.
+# ===== Tenant/Subscription for login automation (fill if needed) =====
+# If you set the correct tenant ID from error logs here, you avoid being redirected to a wrong tenant that triggers MFA.
+# Default subscription ID (optional). If set, enables non-interactive mode.
 TENANT_ID=
-# 기본으로 사용할 구독 ID (선택). 지정 시 비대화식으로 설정합니다.
 AZ_SUBSCRIPTION_ID=
