tools_todo.py 완전 삭제: MCP 코드 일원화 및 legacy 제거

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# ===== MCP API 인증 =====
+API_KEY=your-secure-api-key-here
 # ===== Azure / Microsoft Graph =====
 APP_PREFIX=mcp-todo-server
 SCOPES=Tasks.ReadWrite
