--- a/app/tools/todo.tasks.create.json
+++ b/app/tools/todo.tasks.create.json
@@ -1,24 +1,44 @@
 {
-  "name": "todo.tasks.create",
-  "description": "Create new task.",
-  "inputSchema": {
-    "type": "object",
-    "properties": {
-      "title": { "type": "string" },
-      "list_id": { "type": "string" },
-      "due": { "type": "string", "format": "date-time" }
+    "name": "todo.tasks.create",
+    "description": "Create new task.",
+    "inputSchema": {
+        "type": "object",
+        "properties": {
+            "title": {
+                "type": "string"
+            },
+            "list_id": {
+                "type": "string"
+            },
+            "due": {
+                "type": "string",
+                "format": "date-time"
+            }
+        },
+        "required": [
+            "title",
+            "list_id"
+        ],
+        "additionalProperties": false
     },
-    "required": ["title", "list_id"],
-    "additionalProperties": false
-  },
-  "outputSchema": {
-    "type": "object",
-    "properties": {
-      "id": { "type": "string" },
-      "title": { "type": "string" },
-      "due": { "type": "string", "format": "date-time" }
-    },
-    "required": ["id", "title"],
-    "additionalProperties": false
-  }
+    "outputSchema": {
+        "type": "object",
+        "properties": {
+            "id": {
+                "type": "string"
+            },
+            "title": {
+                "type": "string"
+            },
+            "due": {
+                "type": "string",
+                "format": "date-time"
+            }
+        },
+        "required": [
+            "id",
+            "title"
+        ],
+        "additionalProperties": false
+    }
 }
