feat: expand tool schema (lists/tasks/lite/delta), add structured JSON logging with correlation id, update docs and CD pipeline\n\n- Tool schema: add lists/tasks/lite/delta schemas and execution mapping\n- Domain/Infra/Usecases: add lite/delta/convenience methods\n- Graph adapter: backoff/retry, If-Match, batch chunk, env config\n- Structured logging: JSON logs, correlation id propagation, SSE event logs\n- Docs: remove template, add project intro, update config/sidebar/pages, add architecture/configuration docs\n- Build/CD: confirm build ignore, review GitHub Pages workflow\n- Env: document key variables\n- Usage: add smoke test, curl, docs run instructions

--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,23 @@ API_KEY=your-secure-api-key-here
 # ===== Azure / Microsoft Graph =====
 APP_PREFIX=mcp-todo-server
 SCOPES=Tasks.ReadWrite
+GRAPH_BASE_URL=https://graph.microsoft.com/v1.0
 
 # ===== Server =====
 EXECUTOR_MODE=rest
 PORT=8082
 TZ=Asia/Seoul
 LOG_LEVEL=INFO
+SERVER_NAME=MCP ToDo Server
+SERVER_VERSION=0.2.0
+MCP_PROTOCOL_REV=2025-06-18
+SSE_ENABLED=true
+ALLOW_ORIGINS=
 
 # ===== Paths (relative) =====
 HOST_SECRETS=./secrets
 HOST_HELPER=./auth-helper
+TOOL_SCHEMA_DIR=
 
 # ===== Container internal paths =====
 SERVER_CTR_SECRETS=/app/secrets
@@ -38,3 +45,10 @@ MCP_TOKEN_FILE=${SERVER_CTR_SECRETS}/token.json
 # Default subscription ID (optional). If set, enables non-interactive mode.
 TENANT_ID=
 AZ_SUBSCRIPTION_ID=
+
+# ===== HTTP / Rate limiting / Circuit breaker =====
+HTTP_TIMEOUT=30
+RATE_PER_SEC=5
+RATE_BURST=5
+CB_FAILS=3
+CB_COOLDOWN_SEC=5
