MCP 서버 및 인증/작업 테스트: 반복 일정, 메모, 상태 변경 등 최신 작업 반영

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,7 @@ RATE_PER_SEC=5
 RATE_BURST=5
 CB_FAILS=3
 CB_COOLDOWN_SEC=5
+
+# ===== Auth refresh (helper) =====
+REFRESH_INTERVAL=60
+REFRESH_SLACK=600
