fix: MCP 서버 SSE/알림 분기 및 Traefik 라벨 개선

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,12 @@ CB_COOLDOWN_SEC=5
 # ===== Auth refresh (helper) =====
 REFRESH_INTERVAL=60
 REFRESH_SLACK=600
+
+# ===== Traefik (reverse proxy) =====
+MCP_DOMAIN=todo.yamon.io
+TRAEFIK_NETWORK=traefik_Net
+TRAEFIK_ENTRYPOINTS=websecure
+ACME_RESOLVER=acmeresolver
+ROUTER_NAME=mcp
+SERVICE_NAME=mcp
+
