chore: user local changes

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ SERVER_VERSION=0.2.0
 MCP_PROTOCOL_REV=2025-06-18
 SSE_ENABLED=true
 ALLOW_ORIGINS=
+USER_TEMPLATE_DEFAULT=lite
+SENTRY_DSN=
+DB_URL=sqlite:///./secrets/app.db
+DB_ECHO=false
+DB_AUTO_CREATE=false
 
 # ===== Paths (relative) =====
 HOST_SECRETS=./secrets
@@ -64,4 +69,3 @@ TRAEFIK_ENTRYPOINTS=websecure
 ACME_RESOLVER=acmeresolver
 ROUTER_NAME=mcp
 SERVICE_NAME=mcp
-
