--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,19 @@ dependencies = [
     "fastapi>=0.110,<0.111",
     "uvicorn[standard]>=0.29,<0.30",
     "httpx>=0.27,<0.28",
-    "sse-starlette>=1.6,<2.0",
     "python-dotenv>=1.0,<2.0",
-    "msal>=1.33,<2.0",
-    "PyJWT>=2.10,<3.0",
-    "requests>=2.32,<3.0",
     "jsonschema>=4.22,<5.0",
+    "SQLAlchemy>=2.0,<3.0",
+    "alembic>=1.13,<2.0",
 ]
+
+[project.scripts]
+mcp-cli = "app.cli:main"
+
+[tool.black]
+line-length = 100
+target-version = ["py310"]
+
+[tool.isort]
+profile = "black"
+line_length = 100
