fix: pydantic v2 root model migration, dev-serve python path, and doc/Makefile updates

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+# ===== Dynamic Template Watcher (자동 템플릿 동기화) =====
+# 템플릿 폴더 변경 시 DB에 자동 반영하려면 true로 설정
+DYNAMIC_TEMPLATE_WATCH=false
 # ===== MCP API 인증 =====
-API_KEY=your-secure-api-key-here
+# 관리자(마스터) 키: ADMIN_API_KEY 사용 (옛 API_KEY 지원은 곧 제거 예정)
+ADMIN_API_KEY=your-secure-admin-key-here
+# 사용자 키는 DB에서 발급되며, 호출 시 헤더에 사용: X-API-Key: <user_api_key>
 # ===== Azure / Microsoft Graph =====
 APP_PREFIX=mcp-todo-server
 SCOPES=Tasks.ReadWrite
@@ -44,6 +49,16 @@ TOOL_IMAGE=mcr.microsoft.com/azure-cli:latest
 MCP_CONTAINER=mcp-server
 MCP_IMAGE=yamon/mcp-server:latest
 MCP_TOKEN_FILE=${SERVER_CTR_SECRETS}/token.json
+
+# ===== Policy (Casbin) =====
+# 기본: 파일 기반 정책 (샘플)
+CASBIN_MODEL=./policy/model.conf
+CASBIN_POLICY=./policy/policy.csv
+# DB 기반 정책을 사용하려면:
+# - 위 CASBIN_POLICY 대신 CASBIN_STORE=db 또는 CASBIN_DB=true 설정
+# - 테이블: casbin_rule(ptype, v0..v5)
+#CASBIN_STORE=db
+#CASBIN_DB=true
 
 # ===== Tenant/Subscription for login automation (fill if needed) =====
 # If you set the correct tenant ID from error logs here, you avoid being redirected to a wrong tenant that triggers MFA.
