--- a/tests/env.sample
+++ b/tests/env.sample
@@ -1,2 +1,24 @@
+# MCP_URL은 PORT 기반으로 자동 설정됨
 MCP_URL=http://localhost:8081
-API_KEY=your-secure-api-key-here
+
+# 관리자(마스터) 키: ADMIN_API_KEY 사용
+# ADMIN_API_KEY=your_admin_api_key_here
+# (비워두면 자동으로 발급 안내 메시지 출력)
+#
+# 관리자 키가 없는 경우:
+# 1. MCP 서버 실행 후
+# 2. 'make apikey-admin' 또는 'python app/cli.py apikeys add --user <admin_username> --role admin' 명령으로 발급
+# 3. 발급된 키를 .env에 추가
+ADMIN_API_KEY=your-secure-admin-key-here
+
+# 일반 사용자 키: USER_API_KEY 사용
+# USER_API_KEY=your_user_api_key_here
+# (비워두면 자동으로 발급 안내 메시지 출력)
+#
+# API 키가 없는 경우:
+# 1. MCP 서버 실행 후
+# 2. 'make apikey' 또는 'python app/cli.py apikeys add --user <username>' 명령으로 발급
+# 3. 발급된 키를 .env에 추가
+# Optional: Casbin DB mode (server must be started with these)
+#CASBIN_MODEL=./policy/model.conf
+#CASBIN_DB=true
