현재 소스 상태 커밋

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,23 @@
 # ===== Dynamic Template Watcher (자동 템플릿 동기화) =====
 # 템플릿 폴더 변경 시 DB에 자동 반영하려면 true로 설정
 DYNAMIC_TEMPLATE_WATCH=false
-# ===== MCP API 인증 =====
-# 관리자(마스터) 키: ADMIN_API_KEY 사용 (옛 API_KEY 지원은 곧 제거 예정)
+# ===== 인증 (authentik 권장) =====
+# authentik 전면 사용 시 (권장):
+# - AUTHENTIK_ENABLED=true, AUTHENTIK_ONLY=true
+# - 아래 인트로스펙션/클라이언트 설정값을 채우세요.
+AUTHENTIK_ENABLED=false
+AUTHENTIK_ONLY=false
+AUTHENTIK_INTROSPECTION_URL=
+AUTHENTIK_CLIENT_ID=
+AUTHENTIK_CLIENT_SECRET=
+# 역할/그룹/그래프 토큰 클레임 규약(필요시 변경)
+AUTHENTIK_ADMIN_ROLE=mcp.admin
+AUTHENTIK_ROLE_PREFIX=mcp.role:
+AUTHENTIK_GROUPS_CLAIM=groups
+AUTHENTIK_GRAPH_ACCESS_CLAIM=graph_access_token
+AUTHENTIK_GRAPH_REFRESH_CLAIM=graph_refresh_token
+
+# API Key 경로 사용 시(개발/백워드 호환용): 관리자(마스터) 키 설정
 ADMIN_API_KEY=your-secure-admin-key-here
 # 사용자 키는 DB에서 발급되며, 호출 시 헤더에 사용: X-API-Key: <user_api_key>
 # ===== Azure / Microsoft Graph =====
